@@ -1,21 +1,18 @@
 package cn.nukkit.recipe;
 
 import cn.nukkit.item.Item;
+import cn.nukkit.network.protocol.types.RecipeUnlockingRequirement;
 import cn.nukkit.recipe.descriptor.DefaultDescriptor;
 import cn.nukkit.recipe.descriptor.ItemDescriptor;
-import cn.nukkit.registry.Registries;
+import cn.nukkit.registry.RecipeRegistry;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import io.netty.util.collection.CharObjectHashMap;
-import it.unimi.dsi.fastutil.Pair;
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Queue;
 import java.util.UUID;
 
 import static cn.nukkit.recipe.RecipeType.SHAPED;
@@ -23,9 +20,9 @@ import static cn.nukkit.recipe.RecipeType.SHAPED;
 public class ShapedRecipe extends CraftingRecipe {
     private final String[] shape;
     private final CharObjectHashMap<ItemDescriptor> shapedIngredients = new CharObjectHashMap<>();
-
     private final int row;
     private final int col;
+    private final boolean mirror;
 
     public ShapedRecipe(Item primaryResult, String[] shape, Map<Character, Item> ingredients, List<Item> extraResults) {
         this(null, 1, primaryResult, shape, ingredients, extraResults);
@@ -34,17 +31,17 @@ public class ShapedRecipe extends CraftingRecipe {
     /**
      * Constructs a ShapedRecipe instance.
      *
-     * @param primaryResult    Primary result of the recipe
-     * @param shape<br>        Array of 1, 2, or 3 strings representing the rows of the recipe.
-     *                         This accepts an array of 1, 2 or 3 strings. Each string should be of the same length and must be at most 3
-     *                         characters long. Each character represents a unique type of ingredient. Spaces are interpreted as air.
-     * @param ingredients<br>  Char =&gt; Item map of items to be set into the shape.
-     *                         This accepts an array of Items, indexed by character. Every unique character (except space) in the shape
-     *                         array MUST have a corresponding item in this list. Space character is automatically treated as air.
-     * @param extraResults<br> List of additional result items to leave in the crafting grid afterwards. Used for things like cake recipe
-     *                         empty buckets.
-     *                         <p>
-     *                         Note: Recipes **do not** need to be square. Do NOT add padding for empty rows/columns.
+     * @param primaryResult Primary result of the recipe
+     * @param shape         <br>        Array of 1, 2, or 3 strings representing the rows of the recipe.
+     *                      This accepts an array of 1, 2 or 3 strings. Each string should be of the same length and must be at most 3
+     *                      characters long. Each character represents a unique type of ingredient. Spaces are interpreted as air.
+     * @param ingredients   <br>  Char =&gt; Item map of items to be set into the shape.
+     *                      This accepts an array of Items, indexed by character. Every unique character (except space) in the shape
+     *                      array MUST have a corresponding item in this list. Space character is automatically treated as air.
+     * @param extraResults  <br> List of additional result items to leave in the crafting grid afterwards. Used for things like cake recipe
+     *                      empty buckets.
+     *                      <p>
+     *                      Note: Recipes do not need to be square. Do NOT add padding for empty rows/columns.
      */
     public ShapedRecipe(String recipeId, int priority, Item primaryResult, String[] shape, Map<Character, Item> ingredients, List<Item> extraResults) {
         this(recipeId, priority, primaryResult, shape,
@@ -53,19 +50,25 @@ public class ShapedRecipe extends CraftingRecipe {
     }
 
     public ShapedRecipe(String recipeId, int priority, Item primaryResult, String[] shape, Map<Character, ItemDescriptor> ingredients, Collection<Item> extraResults) {
-        this(recipeId, null, priority, primaryResult, shape, ingredients, extraResults);
+        this(recipeId, null, priority, primaryResult, shape, ingredients, extraResults, false);
     }
 
-    public ShapedRecipe(String recipeId, UUID uuid, int priority, Item primaryResult, String[] shape, Map<Character, ItemDescriptor> ingredients, Collection<Item> extraResults) {
-        super(recipeId == null ? Registries.RECIPE.computeRecipeId(Lists.asList(primaryResult, extraResults.toArray(Item.EMPTY_ARRAY)), ingredients.values(), SHAPED) : recipeId, priority);
+    public ShapedRecipe(String recipeId, UUID uuid, int priority, Item primaryResult, String[] shape, Map<Character, ItemDescriptor> ingredients, Collection<Item> extraResults, boolean mirror) {
+        this(recipeId, uuid, priority, primaryResult, shape, ingredients, extraResults, mirror, null);
+    }
+
+    public ShapedRecipe(String recipeId, UUID uuid, int priority, Item primaryResult, String[] shape, Map<Character, ItemDescriptor> ingredients,
+                        Collection<Item> extraResults, boolean mirror, RecipeUnlockingRequirement recipeUnlockingRequirement) {
+        super(recipeId == null ? RecipeRegistry.computeRecipeId(Lists.asList(primaryResult, extraResults.toArray(Item.EMPTY_ARRAY)), ingredients.values(), SHAPED) : recipeId, priority, recipeUnlockingRequirement);
         this.uuid = uuid;
         this.row = shape.length;
-        if (this.row > 3 || this.row <= 0) {
+        this.mirror = mirror;
+        if (this.row > 3 || this.row == 0) {
             throw new RuntimeException("Shaped recipes may only have 1, 2 or 3 rows, not " + this.row);
         }
 
         this.col = shape[0].length();
-        if (this.col > 3 || this.col <= 0) {
+        if (this.col > 3 || this.col == 0) {
             throw new RuntimeException("Shaped recipes may only have 1, 2 or 3 columns, not " + this.col);
         }
 
@@ -97,7 +100,7 @@ public class ShapedRecipe extends CraftingRecipe {
             this.ingredients.add(entry.getValue());
         }
     }
-
+    
     public int getWidth() {
         return this.col;
     }
@@ -107,7 +110,7 @@ public class ShapedRecipe extends CraftingRecipe {
     }
 
     public Item getResult() {
-        return this.results.get(0);
+        return this.results.getFirst();
     }
 
     public ShapedRecipe setIngredient(String key, Item item) {
@@ -153,15 +156,53 @@ public class ShapedRecipe extends CraftingRecipe {
 
     @Override
     public boolean match(Input input) {
-        ShapedRecipe.tryShrinkMatrix(input);
-        Item[][] data = input.getData();
+        Input mirrorInput = null;
+        if (mirror && input.getCol() == 3 && input.getRow() == 3) {
+            mirrorInput = new Input(3, 3, mirrorItemArray(input.getData()));
+        }
+        tryShrinkMatrix(input);
+
+        boolean checkMirror = false;
+        next:
         for (int i = 0; i < input.getRow(); i++) {
             for (int j = 0; j < input.getCol(); j++) {
                 ItemDescriptor ingredient = getIngredient(j, i);
-                if (!ingredient.match(data[i][j])) return false;
+                if (!ingredient.match(input.getData()[i][j])) {
+                    if (mirrorInput != null) {
+                        checkMirror = true;
+                        break next;
+                    } else {
+                        return false;
+                    }
+                }
+            }
+        }
+        if (checkMirror) {
+            tryShrinkMatrix(mirrorInput);
+            for (int i = 0; i < mirrorInput.getRow(); i++) {
+                for (int j = 0; j < mirrorInput.getCol(); j++) {
+                    ItemDescriptor ingredient = getIngredient(j, i);
+                    if (!ingredient.match(mirrorInput.getData()[i][j])) {
+                        return false;
+                    }
+                }
             }
         }
         return true;
+    }
+
+    private static Item[][] mirrorItemArray(Item[][] data) {
+        Item[][] clone = new Item[3][3];
+        System.arraycopy(data[0], 0, clone[0], 0, 3);
+        System.arraycopy(data[1], 0, clone[1], 0, 3);
+        System.arraycopy(data[2], 0, clone[2], 0, 3);
+        Item tmp;
+        for (int i = 0; i < 3; i++) {
+            tmp = clone[i][2];
+            clone[i][2] = clone[i][0];
+            clone[i][0] = tmp;
+        }
+        return clone;
     }
 
     /**
@@ -181,89 +222,77 @@ public class ShapedRecipe extends CraftingRecipe {
      * @param input the input
      */
     public static void tryShrinkMatrix(Input input) {
-        Integer r = null, l = null;
-        int row = input.getRow();
-        int col = input.getCol();
-        Item[][] data = input.getData();
-        end:
-        for (int i = 0; i < row; i++) {
-            for (int j = 0; j < col; j++) {
-                if (!data[j][i].isNull()) {
-                    r = i;
-                    l = j;
-                    break end;
-                }
+        Item[][] inputs = input.getData();
+        int startRow = 0, endRow = inputs.length - 1;
+        for (int row = 0; row < inputs.length; row++) {
+            if (notAllEmptyRow(inputs[row])) {
+                startRow = row;
+                break;
+            }
+            // 发现全部都是空气，直接返回空数组
+            if (row == inputs.length - 1) {
+                input.setCol(0);
+                input.setRow(0);
+                input.setData(Input.EMPTY_INPUT_ARRAY);
+                return;
             }
         }
-        if (r == null) {
+        for (int row = inputs.length - 1; row >= 0; row--) {
+            if (notAllEmptyRow(inputs[row])) {
+                endRow = row;
+                break;
+            }
+        }
+        int startColumn = 0, endColumn = inputs[0].length - 1;
+        for (int column = 0; column < inputs[0].length; column++) {
+            if (notAllEmptyColumn(inputs, column)) {
+                startColumn = column;
+                break;
+            }
+        }
+        for (int column = inputs[0].length - 1; column >= 0; column--) {
+            if (notAllEmptyColumn(inputs, column)) {
+                endColumn = column;
+                break;
+            }
+        }
+
+        if (startRow == 0 && endRow == inputs.length - 1 && startColumn == 0 && endColumn == inputs[0].length - 1) {
+            input.setData(inputs);
             return;
         }
-        Queue<Pair<Integer, Integer>> bfsQueue = new ArrayDeque<>(row * col);
-        HashSet<Pair<Integer, Integer>> result = new HashSet<>();
-        bfsQueue.add(Pair.of(l, r));
-        while (!bfsQueue.isEmpty()) {
-            Pair<Integer, Integer> poll = bfsQueue.poll();
-            if (result.contains(poll)) continue;
-            result.add(poll);
-            Integer left = poll.left();
-            Integer right = poll.right();
-            int al = left, ar = right + 1;
-            pushQueue(row, col, data, bfsQueue, result, al, ar);
-            int bl = left, br = right - 1;
-            pushQueue(row, col, data, bfsQueue, result, bl, br);
-            int cl = left + 1, cr = right;
-            pushQueue(row, col, data, bfsQueue, result, cl, cr);
-            int dl = left - 1, dr = right;
-            pushQueue(row, col, data, bfsQueue, result, dl, dr);
+        int newRow = endRow - startRow + 1;
+        int newCol = endColumn - startColumn + 1;
+        Item[][] result = new Item[newRow][newCol];
+        for (int row = startRow; row <= endRow; row++) {
+            if (endColumn + 1 - startColumn >= 0)
+                System.arraycopy(inputs[row], startColumn, result[row - startRow], 0, endColumn + 1 - startColumn);
         }
-        Integer minCol = null, maxCol = null, minRow = null, maxRow = null;
-        for (var pair : result) {
-            Integer left = pair.left();
-            Integer right = pair.right();
-            if (minCol == null) {
-                minCol = right;
-            } else {
-                minCol = Math.min(minCol, right);
-            }
-            if (maxCol == null) {
-                maxCol = right;
-            } else {
-                maxCol = Math.max(maxCol, right);
-            }
-            if (minRow == null) {
-                minRow = left;
-            } else {
-                minRow = Math.min(minRow, left);
-            }
-            if (maxRow == null) {
-                maxRow = left;
-            } else {
-                maxRow = Math.max(maxRow, left);
-            }
-        }
-        int newRow = maxRow - minRow + 1;//+1 because is index
-        int newCol = maxCol - minCol + 1;
-        if (newRow > 0 && newRow < row && newCol > 0 && newCol < col) {
-            Item[][] items = new Item[newRow][newCol];
-            for (int i = 0; i < newCol; i++) {
-                for (int j = 0; j < newRow; j++) {
-                    items[j][i] = data[minRow + j][minCol + i];
-                }
-            }
-            input.setRow(newRow);
-            input.setCol(newCol);
-            input.setData(items);
-        }
+        input.setRow(newRow);
+        input.setCol(newCol);
+        input.setData(result);
     }
 
-    private static void pushQueue(int row, int col, Item[][] data, Queue<Pair<Integer, Integer>> bfsQueue, HashSet<Pair<Integer, Integer>> result, int l, int r) {
-        Pair<Integer, Integer> pair = Pair.of(l, r);
-        if (!result.contains(pair) && l >= 0 && l < col && r >= 0 && r < row) {
-            Item item = data[l][r];
+    private static boolean notAllEmptyRow(Item[] inputs) {
+        for (var item : inputs) {
             if (!item.isNull()) {
-                bfsQueue.add(pair);
+                return true;
             }
         }
+        return false;
+    }
+
+    private static boolean notAllEmptyColumn(Item[][] inputs, int column) {
+        for (var row : inputs) {
+            if (!row[column].isNull()) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    public boolean isMirror() {
+        return mirror;
     }
 
     @Override
